<resources>
    <string name="app_name">Notogo</string>
    <string name="illustration">illustration</string>
    <string name="header">Life Goals Planner</string>
    <string name="subheader">Plan your goals and make it happen🌈</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="title_login_page">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Create your account</string>
    <string name="name">Name</string>
    <string name="email_warning">Wrong email format</string>
    <string name="password_warning">Password must have at least 6 characters</string>
    <string name="name_warning">Name can\'t be empty</string>
    <string name="nametravel">Gunung Papandayan</string>
    <string name="texthead">Hi Kamu, what do you like the most?</string>
    <string name="textsubhead">Select more interest</string>
    <string name="beach">Beach</string>
    <string name="mountain">Mountain</string>
    <string name="lake">Lake</string>
    <string name="zoo">Zoo</string>
    <string name="river">River</string>
    <string name="water_park">Water Park</string>
    <string name="cultural_heritage">Cultural Heritage</string>
    <string name="amusement_park">Amusement Park</string>
    <string name="waterfall">Waterfall</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="mall">Mall</string>
    <string name="monument_museum">Monument/Museum</string>
    <string name="religious_place">Religious Place</string>
    <string name="outbound">Outbound</string>
    <string name="culinary">Culinary</string>
    <string name="shopping">Shopping</string>
    <string name="photo_hunting">Photo Hunting</string>
    <string name="sight_seeing">Sight Seeing</string>
    <string name="get_started">Get Started</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bucket_list">Bucket List</string>
    <string name="add_goal">Add Goal</string>
    <string name="recommend">Recommend</string>
    <string name="liburan_semester_akhir">Liburan Semester Akhir</string>
    <string name="_21_juli_2022">21 Juli 2022</string>
    <string name="sample">Suhu udara 15℃ terutama di sore hari. Termasuk gunung aktif, \n maka banyak uap asap berbau belerang.</string>
    <string name="addtomybucket">Add to my bucket</string>

    <string name="your_list">Your List</string>
    <string name="goals">Goals</string>
    <string name="desc_image_recommend">image_travel</string>
    <string name="sample_location">Gunung Papandayan</string>
    <string name="link_travel_goal">Travel Goal</string>
    <string name="link_custom_goal">Custom Goal</string>

    <string name="register_success">Register success</string>
    <string name="register_fail">Register failed</string>
    <string name="login_success">Login success</string>
    <string name="login_fail">Login failed</string>

    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>

    <string name="greeting">Hello %1$s,</string>
    <string name="success_load_goals">Load Success</string>
    <string name="fail_load_goals">Load Failed</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="category">Category</string>
    <string name="budget">Budget</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="reminder">Reminder</string>
    <string name="time">Time</string>
    <string name="input_image">Input Image</string>
    <string name="time_alarm">time alarm</string>
    <string name="date_alarm">Date Alarm</string>
    <string name="input_location">Input Location</string>
    <string name="nama_lokasi">Nama Lokasi</string>
    <string name="title_category">Category</string>
    <string name="museum_enter">Monument/ Museum</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="sample_note">Suhu udara 15℃ terutama di sore hari. Termasuk gunung aktif, maka banyak uap asap berbau belerang.</string>
    <string name="sample_date">22 Agustus 2022</string>
    <string name="sample_budget">Rp. 245.000</string>
    <string name="sample_title">Liburan Semester</string>
    <string name="more_information">More Info</string>
    <string name="transport">Transport</string>
    <string name="hotel">Hotel</string>
    <string name="food">Food</string>
    <string name="search_location">Search Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="find_location">Find Location</string>
    <string name="search_hint">Search Location</string>
    <string name="button_add_goal">Button Add Goal</string>
    <string name="create_your_goal">Create Your Goal</string>
    <string name="image_preview">Image Preview</string>
    <string name="save">Save</string>
    <string name="skip_without_image">Skip without image</string>
    <string name="conservation">Conservation</string>
    <string name="add_success">Add Successful</string>
    <string name="add_failed">Added Failed</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_fail">Upload Failed</string>
</resources>